Fixed styling to remove scrollbar from page and make it a fullscreen app

--- a/client/src/components/styling/components/MealPlanner.scss
+++ b/client/src/components/styling/components/MealPlanner.scss
@@ -1,3 +1,4 @@
 .MealPlanner {
   display: flex;
+  height: 100%;
 }
