--- a/client/src/components/styling/shared/base.scss
+++ b/client/src/components/styling/shared/base.scss
@@ -7,12 +7,15 @@ html,
 body {
   height: 100%;
   margin: 0;
-  overflow-y: hidden;
+  // overflow-y: hidden;
 }
 
 .App {
   height: 100%;
   margin: 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 #root {
   height: 100%;
